add backend swagger to api in backend, make the hide and show with more logic way depend on name and know about bus
